--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "STACK.C": "cpp",
         "main.C": "cpp",
-        "selection.C": "cpp"
+        "selection.C": "cpp",
+        "xstring": "c",
+        "xutility": "c"
     }
 }
